Hide upvotes on mobile and fixed wrapping on mobile

--- a/tcf_website/static/reviews/review.css
+++ b/tcf_website/static/reviews/review.css
@@ -1,3 +1,8 @@
+.review .review-header {
+    color: var(--accent-color);
+    font-size: 1.25rem;
+}  
+
 .review .upvote, .review .downvote {
     font-size: 2rem;
     color: #aaa;
